--- a/HeartClassificationModel.ipynb
+++ b/HeartClassificationModel.ipynb
@@ -36,7 +36,7 @@
         "id": "HjCJG4qMS6ms"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1hR92YKQZ6_PWoeOEH8TWe9MjPbFx5FAr)" Drag and Drop
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1hR92YKQZ6_PWoeOEH8TWe9MjPbFx5FAr)"
       ]
     },
     {
